tests/fixtures/fail/no-any.ts
// Violates: no-any
export function parse(input: any): string {
    return String(input)
}
